<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@id/videoViewFragment"
        android:title="@string/videoview" />
    <item
        android:id="@id/mediaControllerFragment"
        android:title="@string/mediacontroller" />
    <item
        android:id="@id/mediaPlayerFragment"
        android:title="@string/mediaplayer" />
    <item
        android:id="@id/cellAnimationFragment"
        android:title="@string/cell_animation" />
    <item
        android:id="@id/tweenAnimationFragment"
        android:title="@string/tween_animation" />
    <item
        android:id="@id/serviceFragment"
        android:title="@string/service" />
    <item
        android:id="@id/dialogScreensFragment"
        android:title="@string/dialog_screens" />
</menu>